--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "php": ">=5.5.0",
         "slim/slim": "^3.1",
         "slim/php-view": "^2.0",
+        "propel/propel": "~2.0@dev",
         "monolog/monolog": "^1.17"
     },
     "require-dev": {
