--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
     },
+    "autoload": {
+        "classmap": ["storage-api/generated-classes/"]
+    },
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
