--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,12 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "name": "my-app-name",
+    "description": "A candidate test for Paxum",
+    "homepage": "https://gist.github.com/ygoldshtrakh/d8cf541a549ff7831336563711064a38",
     "license": "MIT",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Eugenii Strigo",
+            "email": "james.kotoff@gmail.com",
         }
     ],
     "require": {
