--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "authors": [
         {
             "name": "Eugenii Strigo",
-            "email": "james.kotoff@gmail.com",
+            "email": "james.kotoff@gmail.com"
         }
     ],
     "require": {
